conditionally adding class to game container to have correct hieght without layout shifts

--- a/src/index.css
+++ b/src/index.css
@@ -162,6 +162,9 @@ button {
   min-height: 80vh;
   background-image: linear-gradient(to right, #3961B0, #3961B0);
 }
+.game-active{
+  min-height: 100vh;
+}
 .game-content-container{
   display: grid;
   grid-template-columns:repeat(3,1fr);
